--- a/app/elements/viewport.html
+++ b/app/elements/viewport.html
@@ -39,7 +39,7 @@
             }
         </style>
 
-        <iron-a11y-keys id="keys" keys="d f m" target="[[target]]" on-keys-pressed="_onPressed">
+        <iron-a11y-keys id="keys" keys="d g m h" target="[[target]]" on-keys-pressed="_onPressed">
         </iron-a11y-keys>
 
         <iron-pages id="panel" attr-for-selected="name" selected="brdfPlot"
@@ -78,6 +78,8 @@
                 var key = event.detail.key;
                 if (key === "m") {
                     this.fire("open-model-picker");
+                } else if (key === "h") {
+                    this.fire("open-help-dialog");
                 } else {
                     var widgetName = key === "d" ? "brdfPlot" : "objView";
                     this.$.panel.select(widgetName);
