--- a/app/elements/shader-item.html
+++ b/app/elements/shader-item.html
@@ -9,6 +9,7 @@
 <link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
 
 <script type="text/javascript" src="../scripts/elements/shader.js"></script>
+<script type="text/javascript" src="../scripts/Math.uuid.js"></script>
 
 <dom-module id="shader-item">
     <template>
@@ -112,6 +113,7 @@
                     type: String,
                     value: "Unknown"
                 },
+                uuid: String,
                 opened: {
                     type: Boolean,
                     value: false
@@ -120,6 +122,7 @@
                     type: Object,
                     observer: "_colorChanged"
                 },
+
                 visible: Boolean,
                 selected: Boolean
             },
@@ -135,6 +138,8 @@
 
             createShaderAttrs: function(shaderName) {
                 var shaderProp = pgLib[shaderName];
+                this.name = shaderName;
+                this.uuid = Math.uuid();
                 this._addParamCtrls(shaderProp);
             },
 
@@ -148,12 +153,13 @@
                 this.visible = !this.visible;
                 this.fire("shader-visibility-changed", {
                     shaderName: this.name,
+                    uuid: this.uuid,
                     visible: this.visible
                 });
             },
 
             _select: function(event) {
-                this.fire("shader-selected", this.name);
+                this.fire("shader-selected", this.uuid);
             },
 
             _addParamCtrls: function(shaderProp) {
@@ -204,6 +210,7 @@
 
                 this.fire("shader-param-changed", {
                     shaderName: this.name,
+                    uuid: this.uuid,
                     name: "uDisplayColor",
                     value: new THREE.Color(colorStr)
                 });
@@ -215,6 +222,7 @@
 
             _onParamChanged: function (e) {
                 e.detail.shaderName = this.name;
+                e.detail.uuid = this.uuid;
                 this.fire("shader-param-changed", e.detail);
             }
         });
