--- a/elements/elements.html
+++ b/elements/elements.html
@@ -3829,6 +3829,34 @@ h1, h3, h5 { text-transform: uppercase; }
   </template>
 
   </dom-module>
+<dom-module id="iron-collapse" assetpath="../bower_components/iron-collapse/">
+
+  <style>
+
+    :host {
+      display: block;
+      transition-duration: 300ms;
+      overflow: visible;
+    }
+
+    :host(.iron-collapse-closed) {
+      display: none;
+    }
+
+    :host(:not(.iron-collapse-opened)) {
+      overflow: hidden;
+    }
+
+  </style>
+
+  <template>
+
+    <content></content>
+
+  </template>
+
+</dom-module>
+
 <dom-module id="paper-tooltip" assetpath="../bower_components/paper-tooltip/">
   <template>
     <style>
@@ -3873,36 +3901,6 @@ h1, h3, h5 { text-transform: uppercase; }
   </template>
 
   </dom-module>
-
-
-<dom-module id="iron-collapse" assetpath="../bower_components/iron-collapse/">
-
-  <style>
-
-    :host {
-      display: block;
-      transition-duration: 300ms;
-      overflow: visible;
-    }
-
-    :host(.iron-collapse-closed) {
-      display: none;
-    }
-
-    :host(:not(.iron-collapse-opened)) {
-      overflow: hidden;
-    }
-
-  </style>
-
-  <template>
-
-    <content></content>
-
-  </template>
-
-</dom-module>
-
 <dom-module id="shader-item" assetpath="/">
     <template>
         <style is="custom-style">
@@ -4045,7 +4043,6 @@ h1, h3, h5 { text-transform: uppercase; }
         <div class="flex-vertical">
             <paper-toolbar>
                 <span class="title">Photongram</span>
-                <paper-tooltip position="bottom">Press <b>'h'</b> for more info.</paper-tooltip>
             </paper-toolbar>
             <iron-ajax id="topodata" auto="" url="../assets/asset.json" handleas="json" last-response="{{assets}}"></iron-ajax>
 
@@ -4171,6 +4168,13 @@ h1, h3, h5 { text-transform: uppercase; }
                 bottom: 0;
                 left: 0;
             }
+
+            #help {
+                z-index: 101;
+                position: absolute;
+                right: 5px;
+                bottom: 5px;
+            }
         </style>
 
         <iron-a11y-keys id="keys" keys="d g m h" target="[[target]]" on-keys-pressed="_onPressed">
@@ -4181,6 +4185,7 @@ h1, h3, h5 { text-transform: uppercase; }
             <model-viewport id="modelPanel" name="objView"></model-viewport>
         </iron-pages>
         <track-ball on-light-pos-changed="_changeLightPos"></track-ball>
+        <paper-icon-button id="help" icon="custom-icons:help" on-click="_openHelpDialog"></paper-icon-button>
 
         
         <iron-signals on-iron-signal-shader-added="_addShader"></iron-signals>
@@ -4198,6 +4203,7 @@ h1, h3, h5 { text-transform: uppercase; }
             <g id="visibility"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"></path></g>
             <g id="visibility-off"><path d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"></path></g>
             <g id="place"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"></path></g>
+            <g id="help"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"></path></g>
         </defs>
     </svg>
 </iron-iconset-svg>
