Adopt glTF for geometry assets

--- a/app/elements/model-viewport.html
+++ b/app/elements/model-viewport.html
@@ -23,3 +23,8 @@
 </dom-module>
 
 <script type="text/javascript" src="../scripts/elements/model-viewport.js"></script>
+<script type="text/javascript" src="../scripts/gltf/glTF-parser.js"></script>
+<script type="text/javascript" src="../scripts/gltf/glTFLoader.js"></script>
+<script type="text/javascript" src="../scripts/gltf/glTFLoaderUtils.js"></script>
+<script type="text/javascript" src="../scripts/gltf/glTFAnimation.js"></script>
+<script type="text/javascript" src="../scripts/gltf/glTFShaders.js"></script>
